--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="landing_room">
         <div class="block">
             <h1><img src="logo.png" alt=""></h1>
-            <a href="home.html">ENTER INTO THIS WORLD</a>
+            <a href="home.html">CLICK TO CONTINUE</a>
         </div>
     </div> 
 </body>
